// Copyright (c) 2019 IoTeX
// This source code is provided 'as is' and no warranties are given as to title or non-infringement, merchantability
// or fitness for purpose and, to the extent permitted by law, all liability for your use of the code is disclaimed.
// This source code is governed by Apache License 2.0 that can be found in the LICENSE file.

// To compile the proto, run under the current directory:
//      protoc --go_out=. index.proto
syntax = "proto3";
package indexpb;
option go_package = "../indexpb";

message BlockIndex {
    uint32 numAction = 1;
    bytes hash = 2;
    bytes tsfAmount = 3;
}

message ActionIndex {
    uint64 blkHeight = 1;
}

message SGDIndex {
    string contract = 1;
    string deployer = 2;
    string receiver = 3;
    uint64 createTime = 4;
    int32 callTimes = 5;
}
